Description, keyword and license added for Dataset
